Fix: Reduce landing info font size on small viewports

--- a/src/sass/modules/_landing.scss
+++ b/src/sass/modules/_landing.scss
@@ -102,7 +102,7 @@
 
 	.landing-info {
 	  color: #fafafa;
-	  font-size: 15px;
+	  font-size: 13px;
 	  font-weight: 200;
 	  left: 0;
 	  margin: auto;
@@ -111,7 +111,7 @@
 	  right: 0;
 	  text-align: center;
 	  top: 38%;
-	  width: 400px;
+	  width: 320px;
 
 	  @media #{$medium-up} {
 	  	font-size: 19px;
